--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "hydra-core (>=1.3.2,<2.0.0)",
     "omegaconf (>=2.3.0,<3.0.0)",
     "mlflow (>=3.8.1,<4.0.0)",
-    "dvc (>=3.65.0,<4.0.0)"
+    "dvc (>=3.65.0,<4.0.0)",
+    "dvc-webdav (>=3.0.1,<4.0.0)"
 ]
 
 
