--- a/commonlit_scoring/configs/config.yaml
+++ b/commonlit_scoring/configs/config.yaml
@@ -3,4 +3,6 @@ defaults:
   - model: model
   - trainer: trainer
   - logging: logging
+  - infer: infer
+mode: train
 project_name: commonlit-scoring
